--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <h1>Bookmarklet</h1>
 
   <p>
-    This is a <a href="javascript:(function(){let script=document.createElement('script');script.src='./sketch.js';document.body.appendChild(script);})();">bookmarklet</a>.
+    This is a <a href="javascript:(function(){let script=document.createElement('script');script.src='https://camer0.github.io/bookmarklet/sketch.js';document.body.appendChild(script);})();">bookmarklet</a>.
   </p>
-
+  <span>hello</span>
 </body>
 </html>
